# ABToken

./: foundry.toml  remappings.txt
kyc-service/: Cargo.toml  docker-compose.yml  readme.md
kyc-service/migrations/2025-02-17-073514_create_kyc_table/: up.sql
kyc-service/src/: main.rs  schema.rs
script/: ABToken.s.sol
script/T_REX/: RWAStation.s.sol
smart-contract/test/: ABTokenTest.t.sol  readme.md
smart-contract/test/mocks/utils/: TrustedIssuersRegistryMock.sol
src/: ABToken.sol  Compliance.sol  IdentityRegistry.sol  TrustedIssuersRegistry.sol
src/Errors/: ABTokenErrors.sol  ComplianceErrors.sol  IdentityRegistryStorageErrors.sol
src/T_REX/: TREXFactory.sol
src/compliances/: RWACompliance.sol
src/interfaces/: IClaimTopicsRegistry.sol  ICompliance.sol  IERC3643.sol  IIdentityRegistry.sol  ITrustedIssuersRegistry.sol
src/interfaces/storage/: IIdentityRegistryStorage.sol
src/storage/: IdentityRegistryStorage.sol
test/: ABTokenTest.t.sol  ERC3643Test.t.sol  RWAComplianceModuleTest.t.sol
test/mocks/: IdentityRegistryMock.sol
test/mocks/utils/: ClaimTopicsRegistryMock.sol  IdentityRegistryStorageMock.sol
